# pleview-rs

./: .deepsource.toml  .eslintignore  .eslintrc.js  .eslintrc.json  .prettierrc  LICENSE  README.md  package-lock.json  package.json  test.txt  vite.config.ts
sample-data/: Fe.pol1  Fe.pol2  anizo.txt  fldscan1.txt  fldscan2.txt  g006-blue-TR2.img  grafen.txt  mapa.txt  microwaves_OFF.asc
src/: global.css  main.tsx  schemas.ts  store.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: axis.rs  cross_section.rs  engine.rs  enums.rs  files.rs  grid_data_2d.rs  logger.rs  main.rs  menu.rs
src/App/: App.tsx
src/app/containers/App/: App.tsx
src/app/containers/ColorScalePicker/: ColorScalePicker.tsx  color-scale.slice.ts  index.ts
src/app/containers/ColorScalePicker/components/: ColorForm.tsx  ColorInputSection.tsx  ColorScaleMarker.tsx  GradientBar.tsx  PointList.tsx  (+2 more)
src/app/containers/Navbar/: Navbar.tsx  index.ts  navbar.slice.ts
src/app/containers/Viz/: Viz.tsx  common-layout.ts  index.ts  schemas.ts
src/app/enums/: visualizations.enum.ts
src/app/hooks/: index.ts  use-debounce.hook.ts
src/app/models/: color-scale-point.model.ts  index.ts  tauri-payloads.model.ts
src/app/store/: color-scale.slice.ts  index.ts
src/app/utils/: color.utils.ts  index.ts  tauri.utils.ts  viz.utils.ts
src/components/: App.tsx  Navbar.tsx  Viz.tsx
src/components/App/: App.tsx
src/components/CrossSections/: CrossSections.tsx  index.ts
src/components/Map/: Map.tsx
src/components/Navbar/: Navbar.tsx
src/enums/: index.ts
src/utils/: index.ts
(+4 files in other folders)
