[package]
name = "pleview"
version = "0.1.0"
description = "PLEview is an open-source project to assist in analysis of experimental data."
authors = ["Tomasz Kazimierczuk, Wiktor Kraśnicki"]
license = "MIT"
repository = "https://github.com/wkrasnicki/pleview-rs"
default-run = "pleview"
edition = "2021"
rust-version = "1.68"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
# Tauri dependencies
serde_json = "1.0.82"
serde = { version = "1.0.139", features = ["derive"] }
tauri = { version = "1.2.1", features = ["api-all"] }

# PLEview dependencies
rsc = "2.0.0"
log = "0.4.17"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
